set(EASYMOCK_FRAMEWORK_LIBRARY EasyMockFramework)
set(EASYMOCK_FRAMEWORK_LIBRARY_INCLUDE_DIR ${EasyMock_SOURCE_DIR}/src/easyMockFramework/include)

set(EASYMOCK_FRAMEWORK_LIBRARY_SOURCE_FILE
  ${EasyMock_SOURCE_DIR}/src/easyMockFramework/src/easyMock.cpp
  ${EasyMock_SOURCE_DIR}/src/easyMockFramework/src/easyMock_matcher.cpp
)

add_library(${EASYMOCK_FRAMEWORK_LIBRARY} SHARED
  ${EASYMOCK_FRAMEWORK_LIBRARY_SOURCE_FILE}
)

target_link_libraries(${EASYMOCK_FRAMEWORK_LIBRARY} ${LIBUNWIND_LIBRARIES} ${LIBDW_LIBRARIES})

target_include_directories(${EASYMOCK_FRAMEWORK_LIBRARY} PRIVATE ${EASYMOCK_FRAMEWORK_LIBRARY_INCLUDE_DIR})
