set(EASYMOCK_PARSER_TEST_BINARY test_easyMockGenerate_parser)

add_executable(${EASYMOCK_PARSER_TEST_BINARY}
    ${EasyMock_SOURCE_DIR}/test/easyMockGenerate/parser/test_genParser.cpp
)

target_compile_options(${EASYMOCK_PARSER_TEST_BINARY} PRIVATE ${TEST_COMPILE_FLAGS})
target_include_directories(${EASYMOCK_PARSER_TEST_BINARY} PRIVATE ${TEST_INCLUDE_DIR})
target_link_libraries(${EASYMOCK_PARSER_TEST_BINARY} ${TEST_LINK_LIB} ${TEST_FACTORIES_COMMON_OBJ} ${EASYMOCK_COMMON_OBJ} ${EASYMOCK_TEST_LIBRARY} ${LLVM_PARSER_OBJ})
add_test(NAME ${EASYMOCK_PARSER_TEST_BINARY} COMMAND ${EASYMOCK_PARSER_TEST_BINARY})
set_tests_properties(${EASYMOCK_PARSER_TEST_BINARY} PROPERTIES TIMEOUT 7200
        FAIL_REGULAR_EXPRESSION "ERROR;runtime error"
        ENVIRONMENT UBSAN_OPTIONS=print_stacktrace=1)